--- a/Bt1/Bt2.ipynb
+++ b/Bt1/Bt2.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "['A', 'C', 'J', 'K']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
     "    \n",
     "    while queue:\n",
     "        cost, path = heapq.heappop(queue)  # Lấy đường đi đầu tiên trong hàng đợi\n",
-    "        node = path[-1]  # Lấy đỉnh cuối cùng trong đường đi\n",
+    "        node = path[-1]  # Lấy đỉnh cuối cùng trong đường đi path đang xét\n",
     "\n",
     "        if node == end:  # Nếu đến đích, trả về đường đi\n",
     "            return path\n",
