--- a/Bt1/Bt1.ipynb
+++ b/Bt1/Bt1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,6 +72,74 @@
     "    Dùng vòng lặp while end is not None, lần theo các ô cha từ end về start, thêm vào path.\n",
     "    Đảo ngược path để có đường đi đúng thứ tự.\n",
     "    Trả về path là đường đi ngắn nhất."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "street = [(0,1), (0, -1), (1,0), (-1,0), (1,1), (-1,1), (1,-1), (-1,-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (1, 0), (2, 1), (1, 2), (0, 3), (1, 4), (2, 5), (3, 6), (4, 7), (5, 8), (6, 9), (6, 10), (6, 11)]\n",
+      "X 1 0 X 0 1 0 0 0 1 0 0\n",
+      "X 1 X 1 X 1 0 1 0 1 0 1\n",
+      "0 X 0 1 0 X 0 1 0 0 0 0\n",
+      "1 1 0 1 1 1 X 1 1 1 1 0\n",
+      "0 0 0 0 0 1 0 X 0 1 0 0\n",
+      "0 1 1 1 0 1 1 1 X 1 1 0\n",
+      "0 0 0 0 0 0 0 1 0 X X X\n"
+     ]
+    }
+   ],
+   "source": [
+    "def BFS(maze, start, end):\n",
+    "    frontier = deque([start])  # hàng đợi cho các ô cần kiểm tra\n",
+    "    explored = {start: None}  # từ điển lưu các ô đã kiểm tra và cha của nó\n",
+    "\n",
+    "    while frontier:\n",
+    "        current = frontier.popleft()\n",
+    "        if current == end:\n",
+    "            path = []\n",
+    "            while current is not None:\n",
+    "                path.append(current)\n",
+    "                current = explored[current]\n",
+    "            return path[::-1]\n",
+    "        \n",
+    "        for dx, dy in street:\n",
+    "            neighbor = (current[0] + dx, current[1] + dy)\n",
+    "            \n",
+    "            if( 0 <= neighbor[0] < len(maze) and 0 <= neighbor[1] < len(maze[1]) and maze[neighbor[0]][neighbor[1]] == 0 and neighbor not in explored):\n",
+    "                frontier.append(neighbor)\n",
+    "                explored[neighbor] = current\n",
+    "            \n",
+    "    return None  # không tìm thấy đường đi\n",
+    "\n",
+    "# Tìm đường đi từ điểm bắt đầu đến điểm kết thúc\n",
+    "path = BFS(maze, start, end)\n",
+    "print(path)\n",
+    "\n",
+    "# Tạo bản sao mê cung để vẽ đường đi\n",
+    "maze_path = [row[:] for row in maze]\n",
+    "\n",
+    "# Đánh dấu đường đi trên mê cung\n",
+    "for x, y in path:\n",
+    "    maze_path[x][y] = 'X'\n",
+    "\n",
+    "# In mê cung với đường đi\n",
+    "for row in maze_path:\n",
+    "    print(\" \".join(str(cell) for cell in row))\n"
    ]
   },
   {
@@ -169,6 +237,64 @@
     "    Đưa vào stack (hoặc gọi đệ quy).\n",
     "    Đánh dấu trong visited, lưu lại ô cha để truy vết.\n",
     "- Truy vết đường đi tương tự BFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (1, 0), (2, 1), (1, 2), (0, 3), (1, 4), (2, 5), (1, 6), (0, 7), (1, 8), (2, 9), (1, 10), (2, 11), (3, 11), (4, 10), (5, 11), (6, 11)]\n",
+      "X 1 0 X 0 1 0 X 0 1 0 0\n",
+      "X 1 X 1 X 1 X 1 X 1 X 1\n",
+      "0 X 0 1 0 X 0 1 0 X 0 X\n",
+      "1 1 0 1 1 1 0 1 1 1 1 X\n",
+      "0 0 0 0 0 1 0 0 0 1 X 0\n",
+      "0 1 1 1 0 1 1 1 0 1 1 X\n",
+      "0 0 0 0 0 0 0 1 0 0 0 X\n"
+     ]
+    }
+   ],
+   "source": [
+    "def DFS(maze, start, end):\n",
+    "    frontier = [start]  # stack cho các ô cần kiểm tra\n",
+    "    explored = {start: None}  # từ điển lưu các ô đã kiểm tra và cha của nó\n",
+    "\n",
+    "    while frontier:\n",
+    "        current = frontier.pop()\n",
+    "\n",
+    "        if(current == end):\n",
+    "            path = []\n",
+    "            while current is not  None:\n",
+    "                path.append(current)\n",
+    "                current = explored[current]\n",
+    "            return path[::-1]\n",
+    "        \n",
+    "        for dx, dy in street:\n",
+    "            neighbor = (current[0] + dx, current[1] + dy)\n",
+    "            \n",
+    "            if( 0 <= neighbor[0] < len(maze) and 0 <= neighbor[1] < len(maze[1]) and maze[neighbor[0]][neighbor[1]] == 0 and neighbor not in explored):\n",
+    "                frontier.append(neighbor)\n",
+    "                explored[neighbor] = current\n",
+    "\n",
+    "    return None  # không tìm thấy đường đi\n",
+    "# Tìm đường đi từ điểm bắt đầu đến điểm kết thúc\n",
+    "path = DFS(maze, start, end)\n",
+    "print(path)\n",
+    "# Tạo bản sao mê cung để vẽ đường đi\n",
+    "maze_path = [row[:] for row in maze]\n",
+    "\n",
+    "# Đánh dấu đường đi trên mê cung\n",
+    "for x, y in path:\n",
+    "    maze_path[x][y] = 'X'\n",
+    "\n",
+    "# In mê cung với đường đi\n",
+    "for row in maze_path:\n",
+    "    print(\" \".join(str(cell) for cell in row))\n"
    ]
   },
   {
@@ -272,7 +398,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (1, 0), (2, 1), (1, 2), (0, 3), (1, 4), (2, 5), (3, 6), (4, 7), (5, 8), (6, 9), (6, 10), (6, 11)]\n",
+      "X 1 0 X 0 1 0 0 0 1 0 0\n",
+      "X 1 X 1 X 1 0 1 0 1 0 1\n",
+      "0 X 0 1 0 X 0 1 0 0 0 0\n",
+      "1 1 0 1 1 1 X 1 1 1 1 0\n",
+      "0 0 0 0 0 1 0 X 0 1 0 0\n",
+      "0 1 1 1 0 1 1 1 X 1 1 0\n",
+      "0 0 0 0 0 0 0 1 0 X X X\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def UCS(maze, start, end):\n",
+    "    frontier = [(0, start)]  # hàng đợi ưu tiên cho các ô cần kiểm tra\n",
+    "    explored = {start: None}  # từ điển lưu các ô đã kiểm tra và cha của nó\n",
+    "\n",
+    "    while frontier:\n",
+    "        cost, current = heapq.heappop(frontier)\n",
+    "        if current == end:\n",
+    "            path = []\n",
+    "            while current is not None:\n",
+    "                path.append(current)\n",
+    "                current = explored[current]\n",
+    "            return path[::-1]\n",
+    "        \n",
+    "        for dx, dy in street:\n",
+    "            neighbor = (current[0] + dx, current[1] + dy)\n",
+    "\n",
+    "            if(0 <= neighbor[0] < len(maze) and 0 <= neighbor[1] < len(maze[0]) and maze[neighbor[0]][neighbor[1]] == 0 and neighbor not in explored):\n",
+    "                new_cost = cost + 1  # giả sử chi phí di chuyển là 1 cho mỗi ô\n",
+    "                heapq.heappush(frontier, (new_cost, neighbor))\n",
+    "                explored[neighbor] = current\n",
+    "\n",
+    "    return None  # không tìm thấy đường đi\n",
+    "# Tìm đường đi từ điểm bắt đầu đến điểm kết thúc\n",
+    "path = UCS(maze, start, end)\n",
+    "print(path)\n",
+    "\n",
+    "# Tạo bản sao mê cung để vẽ đường đi\n",
+    "maze_path = [row[:] for row in maze]\n",
+    "\n",
+    "# Đánh dấu đường đi trên mê cung\n",
+    "for x, y in path:\n",
+    "    maze_path[x][y] = 'X'\n",
+    "\n",
+    "# In mê cung với đường đi\n",
+    "for row in maze_path:\n",
+    "    print(\" \".join(str(cell) for cell in row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +489,7 @@
        " (6, 11)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
